--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 					<nav>
 						<ul>
 							<li><a href="#intro">Welcome</a></li>
-							<li><a href="#one">Who I am</a></li>
+							<li><a href="#one">Coursework</a></li>
 							<li><a href="#two">What I've done</a></li>
 							<li><a href="#three">Get in touch</a></li>
 						</ul>
@@ -30,7 +30,11 @@
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
 							<h1>Eric Lu</h1>
-							<p>A website for me to showcase my projects, interests, and other fun stuff.</p>
+							<p>I'm a Computer Science and Data Science double major at UC Berkeley. Some of my broader professional interests include 
+                                sofware development, machine learning, data engineering and analysis, and security. I'm currently learning more about DeFi and Decentralized
+                                . In my free time, I love to golf, surf, and play poker.<br>
+								This is my personal website to showcase my projects, interests, and other fun stuff. Enjoy!
+							</p>
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">Learn more</a></li>
 							</ul>
@@ -40,46 +44,42 @@
                 <!-- One -->
 					<section id="one" class="wrapper style3 fade-up">
 						<div class="inner">
-							<h2>Who I am</h2>
-							<p>I'm a Computer Science and Data Science double major at UC Berkeley. Some of my broader professional interests include 
-                                sofware development, machine learning, data engineering and analysis, and security. I'm currently learning about DeFi and Decentralized
-                                Intelligence as a whole. In my free time, I love to golf, surf, and play poker.
+							<h2>Coursework</h2>
+							<p>As a full time student, I've taken a plethora of interesting classes from many of UC Berkeley's different departments. Here were some of 
+								my favorites, and some of the projects we did in them!
                             </p>
 							<div class="features">
 								<section>
 									<span class="icon solid major fa-code"></span>
-									<h3>Lorem ipsum amet</h3>
+									<h3>Structure and Interpretation of Computer Programs</h3>
 									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
 								</section>
 								<section>
 									<span class="icon solid major fa-lock"></span>
-									<h3>Aliquam sed nullam</h3>
+									<h3>Data Structures</h3>
 									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
 								</section>
 								<section>
 									<span class="icon solid major fa-cog"></span>
-									<h3>Sed erat ullam corper</h3>
+									<h3>Principles and Techniques of Data Science</h3>
 									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
 								</section>
 								<section>
 									<span class="icon solid major fa-desktop"></span>
-									<h3>Veroeros quis lorem</h3>
+									<h3>Discrete Mathematics and Probability Theory</h3>
 									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
 								</section>
 								<section>
-									<span class="icon solid major fa-link"></span>
-									<h3>Urna quis bibendum</h3>
+									<span class="icon solid major fa-cog"></span>
+									<h3>Great Ideas in Computer Architecture</h3>
 									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
 								</section>
 								<section>
-									<span class="icon major fa-gem"></span>
-									<h3>Aliquam urna dapibus</h3>
+									<span class="icon solid major fa-desktop"></span>
+									<h3>Efficient Algorithms and Intractable Problems</h3>
 									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
 								</section>
 							</div>
-							<ul class="actions">
-								<li><a href="generic.html" class="button">Learn more</a></li>
-							</ul>
 						</div>
 					</section>
 
