--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
 							<h1>Eric Lu</h1>
 							<p>I'm a Computer Science and Data Science double major at UC Berkeley. Some of my broader professional interests include 
                                 sofware development, machine learning, data engineering and analysis, and security. I'm currently learning more about DeFi and Decentralized
-                                . In my free time, I love to golf, surf, and play poker.<br>
+                                Intelligence. In my free time, I love to golf, surf, and play poker.
+							</p>
+							<p>
 								This is my personal website to showcase my projects, interests, and other fun stuff. Enjoy!
 							</p>
 							<ul class="actions">
@@ -72,12 +74,17 @@
 								<section>
 									<span class="icon solid major fa-cog"></span>
 									<h3>Great Ideas in Computer Architecture</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<p>Coming soon...</p>
 								</section>
 								<section>
 									<span class="icon solid major fa-desktop"></span>
 									<h3>Efficient Algorithms and Intractable Problems</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<p>Coming soon...</p>
+								</section>
+								<section>
+									<span class="icon solid major fa-desktop"></span>
+									<h3>Technology of Decentralized Intelligence</h3>
+									<p>Coming soon...</p>
 								</section>
 							</div>
 						</div>
@@ -153,27 +160,14 @@
 								<section>
 									<ul class="contact">
 										<li>
-											<h3>Address</h3>
-											<span>12345 Somewhere Road #654<br />
-											Nashville, TN 00000-0000<br />
-											USA</span>
-										</li>
-										<li>
 											<h3>Email</h3>
-											<a href="#">user@untitled.tld</a>
-										</li>
-										<li>
-											<h3>Phone</h3>
-											<span>(000) 000-0000</span>
+											<a href="ealu@berkeley.edu">ealu@berkeley.edu</a>
 										</li>
 										<li>
 											<h3>Social</h3>
 											<ul class="icons">
-												<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-												<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-												<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-												<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-												<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+												<li><a href="https://www.linkedin.com/in/ericlu28/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+												<li><a href="https://github.com/ericlu28" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 											</ul>
 										</li>
 									</ul>
@@ -188,7 +182,7 @@
 			<footer id="footer" class="wrapper style1-alt">
 				<div class="inner">
 					<ul class="menu">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>Copyright &copy; Eric Lu 2021. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 				</div>
 			</footer>
