--- a/index.html
+++ b/index.html
@@ -54,22 +54,23 @@
 								<section>
 									<span class="icon solid major fa-code"></span>
 									<h3>Structure and Interpretation of Computer Programs</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<p>https://github.com/ericlu28/cs61a</p>
 								</section>
 								<section>
 									<span class="icon solid major fa-lock"></span>
 									<h3>Data Structures</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<p>https://github.com/ericlu28/cs61b/tree/main/sp21-s941</p>
 								</section>
 								<section>
 									<span class="icon solid major fa-cog"></span>
 									<h3>Principles and Techniques of Data Science</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<p>https://github.com/ericlu28/data8</p>
 								</section>
 								<section>
 									<span class="icon solid major fa-desktop"></span>
 									<h3>Discrete Mathematics and Probability Theory</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<p>Discrete math: Propositional logic, graph theory, secret sharing with polynomials, RSA with modular arithmetic, propose-and-reject</p>
+									<p>Probability: Discrete and continuous distributions, markov chains, counting/inclusion-exclusion, conditional probability, LLN</p>
 								</section>
 								<section>
 									<span class="icon solid major fa-cog"></span>
